--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/bin/index.js",
   "scripts": {
-    "heroku-postinstall": "npm run build",
+    "heroku-postbuild": "npm run build",
     "test": "jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "start": "node dist/bin/index.js",
